--- a/hangman.css
+++ b/hangman.css
@@ -261,7 +261,7 @@ body {
 marquee{
     margin-top:  55px ;
     background:linear-gradient(black,white,gray);
-    color: transparent;
+    color: white;
    -webkit-background-clip:text ;
     background-clip:text ;
 }
